tests/baselines/reference/es6ImportNamedImportNoExportMember.errors.txt
es6ImportNamedImport_1.ts(1,10): error TS2305: Module '"./es6ImportNamedImportNoExportMember_0"' has no exported member 'a1'.
es6ImportNamedImport_1.ts(2,10): error TS2305: Module '"./es6ImportNamedImportNoExportMember_0"' has no exported member 'x1'.


==== es6ImportNamedImportNoExportMember_0.ts (0 errors) ====
    export var a = 10;
    export var x = a;
    
==== es6ImportNamedImport_1.ts (2 errors) ====
    import { a1 } from "./es6ImportNamedImportNoExportMember_0";
             ~~
!!! error TS2305: Module '"./es6ImportNamedImportNoExportMember_0"' has no exported member 'a1'.
    import { x1 as x } from "./es6ImportNamedImportNoExportMember_0";
             ~~
!!! error TS2305: Module '"./es6ImportNamedImportNoExportMember_0"' has no exported member 'x1'.